--- a/Projeto 4 bimestre/WpfApp1/Interface.csproj
+++ b/Projeto 4 bimestre/WpfApp1/Interface.csproj
@@ -145,6 +145,10 @@
       <Project>{585d323a-37fd-4a5a-9ec0-2c860fa82cf5}</Project>
       <Name>ModeloFuncionario</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ModeloUsuario\ModeloUsuario.csproj">
+      <Project>{ee61822c-91fd-4037-b0ad-2399862adc3c}</Project>
+      <Name>ModeloUsuario</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NegocioProgram\NegocioProgram.csproj">
       <Project>{4d9d00ca-fcb7-4e03-8f3d-e2b3a8227279}</Project>
       <Name>NegocioProgram</Name>
